syntax = "proto3";

package bst.v1;

import "area.proto";
import "content.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/tsuyoyo/bst-pj-proto/gen/go/bst/v1;bstv1";

// User model
message User {
  int32  id   = 1;
  string name = 2;
  string icon = 3;
}

message UserFavorite {
  repeated Genre  genres  = 1;
  repeated Artist artists = 2;
  repeated Part   parts   = 3;
}

message UserProfile {
  User                      user         = 1;
  string                    introduction = 2;
  Area                      area         = 3;
  UserFavorite              favorite     = 4;
  google.protobuf.Timestamp created_at   = 5;

  // When the user is well evaluated, the badge is given.
  repeated UserRatingBadge badges = 6;
}

message MyProfile {
  UserProfile profile = 1;
  string      email   = 2;
}

message UserRatingBadge {
  int32  id    = 1;
  string name  = 2;
  string color = 3;
}
